<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="282dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txtview"
        android:textColor="#100E0E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="98dp"
        android:text="@string/config"
        android:textColor="#100E0E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/cb1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cb1"
        android:layout_width="183dp"
        android:layout_height="39dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="5dp"
        android:text="@string/item1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cb2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/cb2"
        android:layout_width="188dp"
        android:layout_height="32dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="4dp"
        android:text="@string/item2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cb3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb1" />

    <CheckBox
        android:id="@+id/cb3"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="215dp"
        android:text="@string/item3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sw1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb2" />

    <Switch
        android:id="@+id/sw1"
        android:layout_width="243dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="2dp"
        android:text="@string/switch1"
        android:textOff="@string/sw1off"
        android:textOn="@string/sw1on"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sw2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb3" />

    <Switch
        android:id="@+id/sw2"
        android:layout_width="246dp"
        android:layout_height="37dp"
        android:text="@string/switch2"
        android:textOff="@string/sw2off"
        android:textOn="@string/sw2on"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sw3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw1" />

    <Switch
        android:id="@+id/sw3"
        android:layout_width="249dp"
        android:layout_height="28dp"
        android:layout_marginEnd="95dp"
        android:text="@string/switch3"
        android:textOff="@string/sw3off"
        android:textOn="@string/sw3on"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sw4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw2" />

    <Switch
        android:id="@+id/sw4"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="40dp"
        android:text="@string/switch4"
        android:textOff="@string/sw4off"
        android:textOn="@string/sw4on"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw3" />

    <Button
        android:id="@+id/button"
        android:layout_width="113dp"
        android:layout_height="59dp"
        android:layout_marginStart="159dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="308dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>